<resources>
    <string name="app_name">COVID Watch</string>
    <string name="title_contact_events">Seen Tags</string>
    <string name="title_my_profile">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_are_you_sick_question">Notify seen tags?</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_clear">Clear</string>
    <string name="title_start_logging">Start</string>
    <string name="title_stop_logging">Stop</string>
    <string name="preference_file_key">org.covidwatch.android.PREFERENCE_FILE_KEY</string>
    <string name="preference_is_current_user_sick">preference_is_current_user_sick</string>
    <string name="preference_is_contact_event_logging_enabled">preference_is_contact_event_logging_enabled</string>
    <string name="preference_last_contact_events_download_date">preference_last_contact_events_download_date</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="notification_current_user_was_exposed">You have been notified</string>

    <!--  FROM THE UX REPO  -->
    <string name="title_welcome">Welcome to COVID Watch</string>
    <string name="title_welcome_subtitle">Join the neighborhood watch for the era of COVID-19. Together, we can save lives.</string>
    <string name="title_get_started">Get Started </string>
    <string name="title_learn_data">Learn about how we protect your data.</string>
    <string name="title_no_information">No identifying information collected.</string>

    <string name="onboarding_button">Let\'s do this!</string>
    <string name="onboarding_steps">Protect your privacy and your community with just 3 steps.</string>
    <string name="onboarding_step1">Turn on Bluetooth.</string>
    <string name="onboarding_step2">Allow us to send you Push notifications to warn you of potential contact.</string>
    <string name="onboarding_share">Share</string>

    <string name="share_subj">Secure COVID-19 contact alert app</string>
    <string name="share_body">I found this privacy-aware COVID-19 app that doesn\'t upload any information.</string>

    <string name="self_report_option1">Yes</string>
    <string name="self_report_option2">No</string>
    <string name="self_report_option3">Not Tested</string>
    <string name="date">Date</string>
    <string name="datepicker">datePicker</string>
    <string name="textView" />
    <string name="disclaimer"><![CDATA[By clicking Report, you acknowledge, understand and further agree to our Privacy Policy and Terms & Conditions]]></string>
    <string name="ble_location_permission">The permission to get BLE location data is required</string>
    <string name="foreground_notification_title">Tags is logging</string>
    <string name="not_contacted">You have NOT been contacted.</string>
    <string name="based_on">Based on last 14 days of activity.</string>
    <string name="we_dont_share">We don\'t share with Big Brother.</string>
    <string name="we_dont_share_2">We share with each other.</string>
    <string name="share_text">Share this app</string>
    <string name="share_sub_text">Ask family and friends to join the COVID Watch Team</string>
    <string name="self_report">Self Report</string>
    <string name="self_report_text">Confirmed COVID-19?</string>
    <string name="question_text">Have you been confirmed with COVID-19?</string>
    <string name="question_date">Date of first symptoms?</string>
    <string name="report">Report</string>

</resources>
