<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userprofile.UserProfileFragment"
        android:background="@{viewModel.isCurrentUserSick ? @color/colorIsCurrentUserSick : @color/colorIsCurrentUserNotSick }" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_is_current_user_sick_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title_are_you_sick_question"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/no_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_no"
                android:textSize="20sp" />

            <Button
                android:id="@+id/yes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_yes"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <import type="org.covidwatch.android.R" />
        <variable
            name="viewModel"
            type="org.covidwatch.android.ui.userprofile.UserProfileViewModel" />
    </data>

</layout>