<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.covidwatch.android.OnboardingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <fragment
            android:id="@+id/header"
            android:name="org.covidwatch.android.HeaderFragment"
            tools:layout="@layout/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/video"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/bkgd_card"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        />

        <Button
            android:id="@+id/takeAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/big_button_width"
            android:minHeight="@dimen/big_button_height"
            android:text="@string/onboarding_button"
            android:textColor="@color/primaryText"
            android:textSize="30dp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step3"
            />
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/steps_header"
            android:layout_width="300dp"
            android:text="@string/onboarding_steps"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/video"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            >
        </TextView>
        <TextView
            android:layout_height="20dp"
            android:id="@+id/step1"
            android:layout_width="250dp"
            android:text="@string/onboarding_step1"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/steps_header"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            app:layout_constraintHorizontal_bias="0.8"
            >
        </TextView>

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/step2"
            android:layout_width="250dp"
            android:text="@string/onboarding_step2"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/step1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            app:layout_constraintHorizontal_bias="0.8"
            >
        </TextView>
        <Button
            android:id="@+id/step3"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/onboarding_share"
            android:textStyle="bold"
            android:onClick="share"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="@color/primaryText"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/step2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="100dp"
            android:textSize="18sp"
            android:background="@drawable/below_shadow"
            >
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/app_name"
            app:layout_constraintLeft_toRightOf="@id/step3"
            app:layout_constraintTop_toBottomOf="@+id/step2"
            android:textSize="18sp"
            android:layout_marginLeft="10sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center"
        />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_1_number_black_and_white"
            app:layout_constraintRight_toLeftOf="@id/step1"
            app:layout_constraintTop_toBottomOf="@+id/steps_header"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
        />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_1_number_black_and_white"
            app:layout_constraintRight_toLeftOf="@id/step1"
            app:layout_constraintTop_toBottomOf="@+id/step1"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_1_number_black_and_white"
            app:layout_constraintRight_toLeftOf="@id/step1"
            app:layout_constraintTop_toBottomOf="@+id/step2"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
