<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.covidwatch.android.MainFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <fragment
            android:id="@+id/header"
            android:name="org.covidwatch.android.HeaderFragment"
            tools:layout="@layout/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Center -->

        <TextView
            android:id="@+id/haveYouBeenContacted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_contacted"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/basedOnText"
            />

        <TextView
            android:id="@+id/basedOnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_on"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/haveYouBeenContacted"
            app:layout_constraintBottom_toTopOf="@id/centerCard"
            />

        <ImageView
            android:id="@+id/centerCard"
            android:minWidth="200dp"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:src="@drawable/bkgd_card"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/basedOnText"
            app:layout_constraintBottom_toTopOf="@id/weDontShare"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/weDontShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_dont_share"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="left"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/centerCard"
            app:layout_constraintBottom_toTopOf="@id/weDontShare2"
            />

        <TextView
            android:id="@+id/weDontShare2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_dont_share_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weDontShare"
            app:layout_constraintBottom_toTopOf="@id/shareCard"
            />

        <!-- Share Button -->

        <ImageView
            android:id="@+id/shareCard"
            android:minWidth="200dp"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:src="@drawable/bkgd_card"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/selfReportCard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="share"
            />

        <TextView
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_text"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="left"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toRightOf="@id/shareIcon"
            app:layout_constraintTop_toTopOf="@id/shareCard"
            app:layout_constraintBottom_toTopOf="@id/shareSubText"
            app:layout_constraintHorizontal_bias="0.1"
            />

        <TextView
            android:id="@+id/shareSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_sub_text"
            android:textColor="@color/primaryText"
            android:textSize="10sp"
            android:textStyle="bold"
            android:gravity="left"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintLeft_toRightOf="@id/shareIcon"
            app:layout_constraintTop_toBottomOf="@id/shareText"
            app:layout_constraintBottom_toBottomOf="@id/shareCard"
            />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_24px"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/self_report"
            android:textColor="@color/primaryText"
            app:cornerRadius="@dimen/small_button_corner_radius"
            app:layout_constraintLeft_toLeftOf="@id/shareCard"
            app:layout_constraintRight_toLeftOf="@id/shareText"
            app:layout_constraintTop_toTopOf="@id/shareText"
            app:layout_constraintBottom_toBottomOf="@id/shareText"
            />

        <!-- Footer -->

        <ImageView
            android:id="@+id/selfReportCard"
            android:minWidth="200dp"
            android:layout_height="75dp"
            android:layout_width="0dp"
            android:src="@drawable/bkgd_card_darker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/selfReportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_report_text"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="left"
            app:cornerRadius="@dimen/button_corner_radius"
            android:layout_marginLeft="25dp"
            app:layout_constraintLeft_toLeftOf="@id/selfReportCard"
            app:layout_constraintRight_toRightOf="@id/selfReportCard"
            app:layout_constraintTop_toTopOf="@id/selfReportCard"
            app:layout_constraintBottom_toBottomOf="@id/selfReportCard"
            app:layout_constraintHorizontal_bias="0.1"
            />

        <Button
            android:id="@+id/selfReport"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:background="@color/primaryBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/self_report_text"
            android:textColor="@color/primaryText"
            app:cornerRadius="@dimen/small_button_corner_radius"
            app:layout_constraintBottom_toBottomOf="@id/selfReportCard"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="@id/selfReportCard"
            app:layout_constraintRight_toRightOf="@id/selfReportCard"
            app:layout_constraintTop_toTopOf="@id/selfReportCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
